updated settings to serve static files

--- a/django_nginx.conf
+++ b/django_nginx.conf
@@ -13,7 +13,7 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    # server_name tiarnanwebmapping.com;
+    # server_name --your-domainname-goes-here--;
     charset     utf-8;
 
     # max upload size
@@ -34,7 +34,7 @@ server {
 server {
     # server context for secure access
     listen 443 ssl;
-    # server_name tiarnanwebmapping.com;
+    # server_name --your-domainname-goes-here--;
     charset     utf-8;
     #server_tokens off;
 
@@ -56,7 +56,7 @@ server {
 
     # Finally, send all non-media requests to the Django server.
     location / {
-    #    proxy_pass  http://tiarnanwebmapping.com;
+    #    proxy_pass  http://--your-domainname-goes-here--;
     #    proxy_set_header    Host                $http_host;
     #    proxy_set_header    X-Real-IP           $remote_addr;
     #    proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
